--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="side">
+    Sidenav
+  </mat-sidenav>
+
+  <mat-toolbar>
+    <mat-toolbar-row>
+      <button mat-button (click)="sidenav.toggle()">Menu</button>
+    </mat-toolbar-row>
+  </mat-toolbar>
+</mat-sidenav-container>
+
+
 <!--<div class="container">
   <div class="jumbotron">
     <h1>Welcome</h1>
@@ -13,6 +26,7 @@
   </div>
 </div> -->
 
-<mat-toolbar color="primary">
-  <span>My Application</span>
-</mat-toolbar>
+<!-- <mat-toolbar color="primary">
+  <span>UniPark</span>
+  <button mat-button>Click me</button>
+</mat-toolbar> -->
