--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-@import '~@angular/material/theming';
-@include mat-core();
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
 
 body, html, .mat-sidenav-container {
   height: 100vh;
