--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,3 +15,15 @@
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
 }
+
+.container {
+  font: 'Helvetica';
+  color: red;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
