--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
+html { background-color: #424242; }
 
 body, html, .mat-sidenav-container {
   height: 100vh;
+  color: white;
 }
