--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,3 +27,10 @@
   margin-right: auto;
   width: 50%;
 }
+
+.align-text-picture {
+  width: 250px;
+	height: 300px;
+	float: left;
+	text-align: center;
+}
