added info for unipark, added svg icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,8 +28,8 @@
       <mat-tab label="Dragon Code">
         <img src="assets/images/branding/dragon-code-name.gif" alt="Dragon Code" class="center">
 
+        <!-- Dragon code information -->
         <mat-tab-group class="center">
-          <!-- Dragon code information -->
           <mat-tab label="Information">
             <p>Dragon Code is a group of 3rd year students from Nelson Mandela University, that have formed
               together, to slay evil bugs and develop the most efficent, secure software for the fate of man kind!
@@ -60,10 +60,33 @@
             </div>
           </mat-tab>
         </mat-tab-group>
-
       </mat-tab>
       <mat-tab label="UniPark">
-        
+        <img src="assets/images/branding/unipark.png" alt="UniPark" class="center-unipark">
+          <!-- Unipark information -->  
+          <mat-tab-group class="center">
+            <!-- Information -->
+            <mat-tab label="What is UniPark">
+              <p>UniPark is an open souce project for a fully automated parking system, that will allow users that
+                have access to a facilities parking area to enter. 
+                The program is securely setup to prevent unauthorized users
+                access to the facility, also to help the facility to control traffic, ensure that person/s
+                in the facility park in the correct area, which is assigned to them. The aim of the system
+                is to improve security of the facility, and ensure that little to no theft occurs regarding motor vehicles.
+              </p>
+            </mat-tab>
+            <!-- -->
+            <mat-tab label="The Looks">
+
+            </mat-tab>
+            <mat-tab label="Installation">
+              <p>To install UniPark 
+                <button mat-button>
+                  <mat-icon svgIcon="android"></mat-icon>
+                    Click Me</button>
+              </p>
+            </mat-tab>
+          </mat-tab-group>
       </mat-tab>
   </mat-tab-group>
 </div>
