--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,6 +28,12 @@
   width: 50%;
 }
 
+.center-unipark {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+ }
+
 .align-text-picture {
   width: 250px;
 	height: 300px;
