--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,14 +1,14 @@
 @import '~@angular/material/theming';
 @include mat-core();
 // Primary Theme
-$custom-primary: mat-palette($mat-grey, 400);
-$custom-accent:  mat-palette($mat-green, A200);
+$custom-primary: mat-palette($mat-red, A400);
+$custom-accent:  mat-palette($mat-red, A100);
 
 $custom-theme: mat-dark-theme($custom-primary, $custom-accent);
 @include angular-material-theme($custom-theme);
 
 //Alternative Theme
-$alt-primary: mat-palette($mat-teal, A400);
+$alt-primary: mat-palette($mat-red, A400);
 $alt-accent:  mat-palette($mat-teal, A200);
 
 $alt-theme: mat-dark-theme($alt-primary, $alt-accent);
