--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -40,24 +40,59 @@
             <mat-tab label="Crew">
               <p><br></p>
               <div class="align-text-picture">
+                <!-- Jason Eybers INFO -->
                   <img src="assets/images/crew/jason.png" alt="Jason Eybers">
-                  <p>Jason Eybers<br>(Steve Jobless)</p>
+                  <p> Jason Eybers<br>(Steve Jobless) <br>
+                    <mat-icon svgIcon="github-circle"
+                              onclick="window.open('https://github.com/EagleEye25/uniPark-BackEnd')"
+                              matTooltip="Github"
+                              matTooltipPosition="below">>
+                    </mat-icon>
+                    <mat-icon svgIcon="linkedin-box"
+                              onclick="window.open('https://www.linkedin.com/in/jason-henry-eybers-b63422157/')"
+                              matTooltip="Linkedin"
+                              matTooltipPosition="below">>
+                    </mat-icon>
+                    <mat-icon svgIcon="slack"
+                              matTooltip="Slack username"
+                              matTooltipPosition="below">
+                    </mat-icon>
+                    <mat-icon svgIcon="twitter"
+                              onclick="window.open('https://twitter.com/JasonEybers')"
+                              matTooltip="Twitter"
+                              matTooltipPosition="below">>
+                    </mat-icon>
+                    <mat-icon svgIcon="stack-overflow"
+                              onclick="window.open('https://stackoverflow.com/users/9384658/eagleeye25')"
+                              matTooltip="Stack-Overflow"
+                              matTooltipPosition="below">>
+                    </mat-icon>
+                    <mat-icon svgIcon="email"
+                              
+                              matTooltip="Email"
+                              matTooltipPosition="below">>
+                    </mat-icon>
+                  </p>
               </div>
+              <!-- Daniel Maree INFO -->
               <div class="align-text-picture">
                   <img src="assets/images/crew/daniel.png" alt="Daniel Maree">
                   <p>Daniel Maree<br>(Copy Paster)</p>
               </div>
+              <!-- Wihan Du Plessis INFO -->
               <div class="align-text-picture">
                   <img src="assets/images/crew/wihan.png" alt="Wihan Du Plessis">
                   <p>Wihan Du Plessis<br>(Data Monkey)</p>
               </div>
+              <!-- Kobus Esterhuizen INFO -->
               <div class="align-text-picture">
                   <img src="assets/images/crew/kobus.png" alt="Kobus Esterhuizen">
                   <p>Kobus Esterhuizen<br>(Code-Modo Dragon)</p>
               </div>
+              <!-- Maurice Garces De Gois INFO -->
               <div class="align-text-picture">
                   <img src="assets/images/crew/maurice.png" alt="Maurice Garcies De Gois">
-                  <p>Maurice Gareces<br>De Gois<br>(Ctrl-SpaceFreak)</p>
+                  <p>Maurice Garces<br>De Gois<br>(Ctrl-SpaceFreak)</p>
               </div>
             </mat-tab>
           </mat-tab-group>
@@ -78,7 +113,7 @@
               </mat-tab>
               <!-- -->
               <mat-tab label="The Looks">
-  
+                <p> Picutres of unipark goes here when its completed! </p>
               </mat-tab>
               <mat-tab label="Installation">
                 <!-- install (developers) -->
