--- a/src/theme.scss
+++ b/src/theme.scss
@@ -8,7 +8,7 @@ $custom-theme: mat-dark-theme($custom-primary, $custom-accent);
 @include angular-material-theme($custom-theme);
 
 //Alternative Theme
-$alt-primary: mat-palette($mat-red, A400);
+$alt-primary: mat-palette($mat-green, A400);
 $alt-accent:  mat-palette($mat-teal, A200);
 
 $alt-theme: mat-dark-theme($alt-primary, $alt-accent);
