--- a/src/app/user-options/user-info/user-info.component.html
+++ b/src/app/user-options/user-info/user-info.component.html
@@ -1,18 +1,20 @@
+<div class="alternative">
   <!-- Display of login modal -->
-  <img src="assets/images//user-options/user-info/user-info.png" alt="User Info">
+  <!-- Displays user info image -->
+  <img src="assets/images/user-options/user-info/user-info.png" alt="User Info">
   <hr>
-<mat-form-field>
-  <input matInput  placeholder="Facility Number">
-</mat-form-field>
-  <br>    
-<mat-form-field>
-  <input matInput placeholder="Password">
-</mat-form-field>
+  <!-- Mat list to display user info -->
+  <mat-list role="list">
+    <mat-list-item role="listitem">Name: </mat-list-item>
+    <mat-list-item role="listitem">Surname: </mat-list-item>
+    <mat-list-item role="listitem">Password: </mat-list-item>
+    <mat-list-item role="listitem">Personel Type: </mat-list-item>
+    <mat-list-item role="listitem">Personel Level: </mat-list-item>
+  </mat-list>
   <br>
-<button mat-button (click)="close()">
-  <mat-icon svgIcon="cancel"></mat-icon>
-  Cancel</button>
-<button mat-button>
-  <mat-icon svgIcon="login-variant"></mat-icon> 
-  Login</button>
-
+  <!-- Close button -->
+  <button mat-button (click)="close()" class="center">
+  <mat-icon svgIcon="close"></mat-icon>
+    Close
+  </button>
+</div>
