--- a/src/app/unipark-page/unipark-page.component.html
+++ b/src/app/unipark-page/unipark-page.component.html
@@ -3,6 +3,7 @@
       <!-- Displays UniPark image -->
       <img src="assets/images/branding/up.png" alt="UniPark">
       <span class="spacer"></span>
+      <p>{{ userName }}</p>
       <button mat-icon-button [matMenuTriggerFor]="menu"
               matTooltip="Menu"
               matTooltipPosition="before">
