--- a/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
+++ b/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
@@ -5,12 +5,11 @@
     <hr>
     <!-- Mat list to display assigned parking -->
     <mat-list role="list">
-      <mat-list-item role="listitem">Name: </mat-list-item>
-      <mat-list-item role="listitem">Surname: </mat-list-item>
-      <mat-list-item role="listitem">Password: </mat-list-item>
-      <mat-list-item role="listitem">Personel Type: </mat-list-item>
-      <mat-list-item role="listitem">Personel Level: </mat-list-item>
+      <mat-list-item role="listitem">Parking Name: </mat-list-item>
+      <mat-list-item role="listitem">Parking Access Level: </mat-list-item>
+      <mat-list-item role="listitem">Location: </mat-list-item>
     </mat-list>
+    <hr>
     <br>
     <!-- CLose button -->
     <button mat-button (click)="close()" class="center">
