--- a/src/app/user-options/request-parking/request-parking.component.html
+++ b/src/app/user-options/request-parking/request-parking.component.html
@@ -1,24 +1,21 @@
 <div class="alternative">
-    <!-- Display of login modal -->
-    <!-- Displays request parking image -->
-    <img src="assets/images/user-options/request-parking/request-parking.png" alt="User Info">
-    <hr>
-    <!-- Mat form feild: cell phone number -->
+  <!-- Display of login modal -->
+  <!-- Displays request parking image -->
+  <img src="assets/images/user-options/request-parking/request-parking.png" alt="User Info">
+  <hr>
+  <div class="center">
+    <!-- Mat form feild: parking area -->
     <mat-form-field>
-      <input matInput  placeholder="Cell-Phone Number">
+      <input matInput  placeholder="Parking Area">
     </mat-form-field>
      <br>
-    <!-- Mat form feild: email address -->
+    <!-- Mat form feild: parking spot -->
     <mat-form-field>
-      <input matInput  placeholder="E-mail Address">
-    </mat-form-field>
-      <br>
-    <!-- Mat form feild: password -->
-    <mat-form-field>
-      <input matInput placeholder="Password">
+      <input matInput  placeholder="Parking Spot">
     </mat-form-field>
     <br>
-    <br>
+  </div>
+    <hr>
     <!-- Close button -->
     <button mat-button (click)="close()">
       <mat-icon svgIcon="cancel"></mat-icon>
