--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -5,7 +5,9 @@
     <hr>
     <!-- Mat form feild: cell phone number -->
     <mat-form-field hintLabel="Max 10 digits">
-      <input matInput #input maxlength="10" placeholder="Cell-Phone Number">
+      <input matInput #input maxlength="10" 
+              placeholder="Cell-Phone Number"
+              [formControl]="cellNo">
       <mat-hint align="end">{{ input.value?.length || 0 }}/10</mat-hint>
     </mat-form-field>
      <br>
@@ -19,11 +21,13 @@
     <!-- Mat form feild: password -->
     <mat-form-field>
       <input matInput placeholder="New Password"
+              [formControl]="newPass"
               [type]="hide ? 'password' : 'text'">
     </mat-form-field>
     <br>
     <mat-form-field>
       <input matInput placeholder="Confirm Password"
+              [formControl]="passVerify"
               [type]="hide ? 'password' : 'text'">
       <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
     </mat-form-field>
