managed to get data from login dialog

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -44,7 +44,7 @@
                   <img src="assets/images/crew/jason.png" alt="Jason Eybers">
                   <p> Jason Eybers<br>(Steve Jobless) <br>
                     <mat-icon svgIcon="github-circle"
-                              onclick="window.open('https://github.com/EagleEye25/uniPark-BackEnd')"
+                              onclick="window.open('https://github.com/EagleEye25/')"
                               matTooltip="Github"
                               matTooltipPosition="below">>
                     </mat-icon>
