--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -13,7 +13,8 @@
             placeholder="Password"
             [type]="hide ? 'password' : 'text'"
             formControlName="userPass">
-    <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+    <mat-icon matSuffix 
+      (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
   </mat-form-field>
 </mat-dialog-content>
   <br>
