--- a/src/app/user-options/user-info/user-info.component.html
+++ b/src/app/user-options/user-info/user-info.component.html
@@ -3,19 +3,33 @@
   <!-- Displays user info image -->
   <img src="assets/images/user-options/user-info/user-info.png" alt="User Info">
   <hr>
-  <!-- Mat list to display user info -->
-  <mat-list role="list">
-    <mat-list-item role="listitem">Name: </mat-list-item>
-    <mat-list-item role="listitem">Surname: </mat-list-item>
-    <mat-list-item role="listitem">Password: </mat-list-item>
-    <mat-list-item role="listitem">Personel Type: </mat-list-item>
-    <mat-list-item role="listitem">Personel Level: </mat-list-item>
-  </mat-list>
+  <mat-dialog-content>
+    <!-- Mat list to display user info -->
+    <mat-list role="list">
+      <mat-list-item role="listitem">
+        <strong>Name: &nbsp;</strong> {{ data.userName }}
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <strong>Surname: &nbsp;</strong> {{ data.userSur }}
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <strong>Password: &nbsp;</strong> {{ data.password }}
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <strong>Personel Type: &nbsp;</strong> {{ data.personelType }}
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <strong>Personel Level: &nbsp;</strong> {{ data.personelLevel }}
+      </mat-list-item>
+    </mat-list> 
+  </mat-dialog-content>
   <hr>
   <br>
-  <!-- Close button -->
-  <button mat-button (click)="close()" class="center">
-  <mat-icon svgIcon="close"></mat-icon>
-    Close
-  </button>
+  <mat-dialog-actions>
+    <!-- Close button -->
+    <button mat-button (click)="close()" class="center">
+    <mat-icon svgIcon="close"></mat-icon>
+      Close
+    </button>
+</mat-dialog-actions>
 </div>
