bettered implimentations, added minor changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
-<!--  -->
-<!-- <app-landing></app-landing>  -->
+<!-- 
+ 
 <app-unipark-page></app-unipark-page>
 
+-->
+<!--
 
+  
+
+   -->
+
+   <app-landing></app-landing>
