--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -32,14 +32,15 @@
         <input matInput placeholder="Confirm Password"
                 [type]="hide ? 'password' : 'text'"
                 formControlName="confirmNewPass">
-        <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+        <mat-icon matSuffix
+          (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
       </mat-form-field>
   </mat-dialog-content>
     <hr>
     <br>
     <mat-dialog-actions>
       <!-- Close button -->
-      <button mat-button (click)="close()">
+      <button mat-button (click)="closeDialog()">
         <mat-icon svgIcon="cancel"></mat-icon>
         Cancel
       </button>
