--- a/src/app/unipark-page/unipark-page.component.html
+++ b/src/app/unipark-page/unipark-page.component.html
@@ -34,7 +34,7 @@
         <!-- Logout -->
         <button mat-menu-item>
           <mat-icon svgIcon="logout"></mat-icon>
-          <span>Logout</span>
+          <span routerLink="/">Logout</span>
         </button>
         </mat-menu>
   </mat-toolbar>
@@ -54,4 +54,5 @@
         Content 2
       </mat-tab>
   </mat-tab-group> -->
+  {{ myDatas }}
 </div>
