--- a/src/app/unipark-page/unipark-page.component.html
+++ b/src/app/unipark-page/unipark-page.component.html
@@ -4,40 +4,39 @@
       <img src="assets/images/branding/up.png" alt="UniPark">
       <span class="spacer"></span>
       <p>{{ userName }} &nbsp; {{ userSur }}</p>
-      <button mat-icon-button [matMenuTriggerFor]="menu"
-              matTooltip="Menu"
-              matTooltipPosition="before">
-        <mat-icon>more_vert</mat-icon>
-      <!-- Menu button -->
-      </button>
-      <mat-menu #menu="matMenu">
-        <!-- View User Information -->
-        <button mat-menu-item (click)="openUserInfoDialog()">
-          <mat-icon svgIcon="account-card-details"></mat-icon>
-          <span>User Information</span>
-        </button>
-        <!-- Update User Info -->
-        <button mat-menu-item (click)="openUpdateUserInfoDialog()">
-          <mat-icon svgIcon="account-settings-variant"></mat-icon>
-          <span>Update User Info</span>
+
+          <!-- View User Information -->
+          <button mat-button (click)="openUserInfoDialog()">
+            <mat-icon svgIcon="account-card-details"></mat-icon>
+            <span>User Information</span>
           </button>
-        <!-- View User Parking Area -->
-        <button mat-menu-item (click)="openAssignedParkingDialog()">
-          <mat-icon svgIcon="parking"></mat-icon>
-          <span>Assigned Parking</span>
-        </button>
-        <!-- Request Parking -->
-        <button mat-menu-item (click)="openRequestParkingDialog()">
+          <!-- Update User Info -->
+          <button mat-button (click)="openUpdateUserInfoDialog()">
+            <mat-icon svgIcon="account-settings-variant"></mat-icon>
+            <span>Update User Info</span>
+            </button>
+          <!-- View User Parking Area -->
+          <button mat-button (click)="openAssignedParkingDialog()">
+            <mat-icon svgIcon="parking"></mat-icon>
+            <span>Assigned Parking</span>
+          </button>
+          <!-- Request Parking -->
+          <button mat-button (click)="openRequestParkingDialog()">
             <mat-icon svgIcon="car-connected"></mat-icon>
             <span>Request Parking</span>
           </button>
-        <!-- Logout -->
-        <button mat-menu-item>
-          <mat-icon svgIcon="logout"></mat-icon>
-          <span routerLink="/">Logout</span>
-        </button>
-        </mat-menu>
+          <!-- Help -->
+          <button mat-button>
+            <mat-icon svgIcon="help"></mat-icon>
+            <span>Help</span>
+          </button>
+          <!-- Logout -->
+          <button mat-button routerLink="/">
+            <mat-icon svgIcon="logout"></mat-icon>
+            <span>Logout</span>
+          </button>
   </mat-toolbar>
+  
   <!-- going to incorportate user options into dialogs, while on defualt unipark page
       will display unipark shit etc 
   Tab group for all user options 
@@ -54,5 +53,4 @@
         Content 2
       </mat-tab>
   </mat-tab-group> -->
-  {{ myDatas }}
 </div>
